--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ matrix:
     - os: osx
       env: CONF=osx-package CAN_DEPLOY=True
     - os: linux
-      env: CONF=linux-package CAN_DEPLOY=True
+      env: CONF=linux-package-appimage CAN_DEPLOY=True
 
     - os: osx
       env: CONF=osx-debug CAN_DEPLOY=False
@@ -79,7 +79,7 @@ deploy:
   - provider: releases
     api_key:
       secure: "hk56wIhJMippWajLTGtO44szXtBCzhCNHAET9fKZ7dXcfEVG22YHuUDMo1ROn6ZhthB5m8SLgctuTf4GtuvGxhdQzjeBSsvYCs6QAAUtMjBb4/lafcBZfr3Amf5TT8MfznGESQDMGjMUjnwQlUoWCVE0XoqNq6DbFlyoZPpscSE="
-    file: build/i-score-$TRAVIS_TAG-Ubuntu-14.04-amd64.deb
+    file: build/i-score-$TRAVIS_TAG-amd64.AppImage
     skip_cleanup: true
     on:
       tags: true
