--- a/base/plugins/iscore-plugin-pluginsettings/CMakeLists.txt
+++ b/base/plugins/iscore-plugin-pluginsettings/CMakeLists.txt
@@ -7,19 +7,19 @@ find_package(Qt5 5.3 REQUIRED COMPONENTS Core Widgets)
 # Files & main target
 set(HEADER_FILES
     "${CMAKE_CURRENT_SOURCE_DIR}/PluginSettings/commands/BlacklistCommand.hpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/PluginSettingsPlugin.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/PluginSettings/PluginSettings.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/PluginSettings/PluginSettingsModel.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/PluginSettings/PluginSettingsPresenter.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/PluginSettings/PluginSettingsView.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/iscore_plugin_pluginsettings.hpp"
 )
 
 set(SOURCE_FILES
     "${CMAKE_CURRENT_SOURCE_DIR}/PluginSettings/commands/BlacklistCommand.cpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/PluginSettingsPlugin.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/PluginSettings/PluginSettingsModel.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/PluginSettings/PluginSettingsPresenter.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/PluginSettings/PluginSettingsView.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/iscore_plugin_pluginsettings.cpp"
 )
 
 add_library(${PROJECT_NAME} ${HEADER_FILES} ${SOURCE_FILES})
