work on remote download

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "3rdparty/nodeeditor"]
 	path = 3rdparty/nodeeditor
 	url = https://github.com/jcelerier/nodeeditor
+[submodule "3rdparty/quazip"]
+	path = 3rdparty/quazip
+	url = https://github.com/jcelerier/quazip
