--- a/tools/sdk/Linux/Dockerfile
+++ b/tools/sdk/Linux/Dockerfile
@@ -3,6 +3,9 @@ FROM centos:6
 RUN yum -y update 
 RUN yum -y install epel-release gcc gcc-c++ wget
 
+ADD gcc.sh /image/gcc-deps.sh
+RUN /image/gcc-deps.sh
+
 ADD gcc.sh /image/gcc.sh
 RUN /image/gcc.sh
 
