begin work on clock manager

--- a/base/plugins/iscore-lib-state/CMakeLists.txt
+++ b/base/plugins/iscore-lib-state/CMakeLists.txt
@@ -21,6 +21,7 @@ set(SRCS
 "${CMAKE_CURRENT_SOURCE_DIR}/State/ExpressionSerialization.cpp"
 
 "${CMAKE_CURRENT_SOURCE_DIR}/State/Widgets/Values/ValueWidget.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/State/Widgets/Values/TypeComboBox.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/State/Widgets/Values/CharValueWidget.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/State/Widgets/Values/StringValueWidget.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/State/Widgets/Values/BoolValueWidget.cpp"
