update with latest nacl

--- a/base/app-nacl/CMakeLists.txt
+++ b/base/app-nacl/CMakeLists.txt
@@ -11,7 +11,7 @@ iscore_write_static_plugins_header()
 get_target_property(QtCore_LIB Qt5::Core LOCATION)
 get_filename_component(QT_LIB_FOLDER ${QtCore_LIB} DIRECTORY)
 
-find_library(qtharfbuzzng_LIBRARY NAMES qtharfbuzzng libqtharfbuzzng HINTS ${QT_LIB_FOLDER})
+#find_library(qtharfbuzzng_LIBRARY NAMES qtharfbuzzng libqtharfbuzzng HINTS ${QT_LIB_FOLDER})
 find_library(qtfreetype_LIBRARY NAMES qtfreetype libqtfreetype HINTS ${QT_LIB_FOLDER})
 find_library(nacl_LIBRARY NAMES nacl libnacl)
 find_library(ppapi_LIBRARY NAMES ppapi_gles2 libppapi_gles2)
@@ -32,14 +32,14 @@ target_link_libraries(${APPNAME} PRIVATE
     Qt5::Core Qt5::Gui Qt5::Widgets Qt5::Network Qt5::Svg Qt5::Xml
     m pthread
 
-    /opt/nacl_sdk/pepper_42/toolchain/linux_pnacl/x86_64-nacl/lib/libppapi.a
-    /opt/nacl_sdk/pepper_42/lib/pnacl/Release/libppapi_cpp.a
-    /opt/nacl_sdk/pepper_42/lib/pnacl/Release/libppapi_cpp_private.a
-    /opt/nacl_sdk/pepper_42/lib/pnacl/Release/libppapi_gles2.a
-    /opt/nacl_sdk/pepper_42/lib/pnacl/Release/libnacl_io.a
-    /opt/nacl_sdk/pepper_42/lib/pnacl/Release/libsdk_util.a
+    /opt/nacl_sdk/pepper_47/toolchain/linux_pnacl/x86_64-nacl/lib/libppapi.a
+    /opt/nacl_sdk/pepper_47/lib/pnacl/Release/libppapi_cpp.a
+    /opt/nacl_sdk/pepper_47/lib/pnacl/Release/libppapi_cpp_private.a
+    /opt/nacl_sdk/pepper_47/lib/pnacl/Release/libppapi_gles2.a
+    /opt/nacl_sdk/pepper_47/lib/pnacl/Release/libnacl_io.a
+    /opt/nacl_sdk/pepper_47/lib/pnacl/Release/libsdk_util.a
 
-    /opt/QtNaCl_5.4/qtbase/lib/libqtharfbuzzng.a
+    /opt/QtNacl_56/qtbase/lib/libqtharfbuzzng.a
 )
 
 
