--- a/base/plugins/iscore-lib-process/CMakeLists.txt
+++ b/base/plugins/iscore-lib-process/CMakeLists.txt
@@ -63,6 +63,8 @@ set(PROCESS_SRCS
 "${CMAKE_CURRENT_SOURCE_DIR}/Process/Style/Skin.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/Process/Style/ColorReference.cpp"
 
+"${CMAKE_CURRENT_SOURCE_DIR}/Process/Layer/LayerContextMenu.cpp"
+
 "${CMAKE_CURRENT_SOURCE_DIR}/Process/State/MessageNode.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/Process/State/ProcessStateDataInterface.cpp"
 
