windows setup program and file associations

--- a/base/app/CMakeLists.txt
+++ b/base/app/CMakeLists.txt
@@ -12,6 +12,9 @@ set(SRCS
   "${CMAKE_CURRENT_SOURCE_DIR}/Application.cpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/main.cpp"
 )
+if(WIN32)
+set(SRCS ${SRCS} "${CMAKE_CURRENT_SOURCE_DIR}/../lib/resources/i-score.rc")
+endif()
 
 if(APPLE)
   set(ICON_SRC "${CMAKE_CURRENT_SOURCE_DIR}/../lib/resources/i-score.icns")
