--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,8 +20,9 @@ build_script:
   - mkdir build
   - cd build
   - set PATH=%QTDIR%\bin;%PATH%
-  - cmake -G"NMake Makefiles" -DISCORE_CONFIGURATION=release -DBOOST_ROOT="%BOOST_ROOT%" -DCMAKE_PREFIX_PATH="%QTDIR%/lib/cmake/Qt5;%JAMOMA_ROOT%/share/cmake/jamoma" ..
-  - msbuild ALL_UNITY.vcxproj /p:Configuration=Release /m
+  - cmake -DISCORE_CONFIGURATION=release -DISCORE_COTIRE=false -DBOOST_ROOT="%BOOST_ROOT%" -DCMAKE_PREFIX_PATH="%QTDIR%/lib/cmake/Qt5;%JAMOMA_ROOT%/share/cmake/jamoma" ..
+#  - C:\Qt\Tools\QtCreator\bin\jom.exe all_unity -j2
+  - msbuild PACKAGE.vcxproj /p:Configuration=Release /m
   - cmake --build . --target package
 
 artifacts:
