refactor of processes

--- a/base/plugins/iscore-lib-process/CMakeLists.txt
+++ b/base/plugins/iscore-lib-process/CMakeLists.txt
@@ -16,6 +16,7 @@ set(PROCESS_HDRS
 "${CMAKE_CURRENT_SOURCE_DIR}/Process/ModelMetadata.hpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/Process/ProcessContext.hpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/Process/ProcessFactory.hpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/Process/GenericProcessFactory.hpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/Process/Process.hpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/Process/ProcessMetadata.hpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/Process/ProcessList.hpp"
@@ -41,6 +42,12 @@ set(PROCESS_HDRS
 "${CMAKE_CURRENT_SOURCE_DIR}/Process/Inspector/ProcessInspectorWidgetDelegateFactory.hpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/Process/Inspector/ProcessInspectorWidgetDelegateFactoryList.hpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/Process/Inspector/ProcessInspectorWidgetDelegate.hpp"
+
+"${CMAKE_CURRENT_SOURCE_DIR}/Process/Dummy/DummyModel.hpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/Process/Dummy/DummyLayerModel.hpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/Process/Dummy/DummyLayerPresenter.hpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/Process/Dummy/DummyLayerView.hpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/Process/Dummy/DummyState.hpp"
 )
 set(PROCESS_SRCS
 "${CMAKE_CURRENT_SOURCE_DIR}/Process/ModelMetadataSerialization.cpp"
@@ -73,11 +80,31 @@ set(PROCESS_SRCS
 
 "${CMAKE_CURRENT_SOURCE_DIR}/Process/Inspector/ProcessInspectorWidgetDelegateFactory.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/Process/Inspector/ProcessInspectorWidgetDelegate.cpp"
+
+"${CMAKE_CURRENT_SOURCE_DIR}/Process/Dummy/DummyModel.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/Process/Dummy/DummyLayerModel.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/Process/Dummy/DummyLayerPresenter.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/Process/Dummy/DummyLayerView.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/Process/Dummy/DummyLayerPanelProxy.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/Process/Dummy/DummyState.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/Process/Dummy/DummyModelSerialization.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/Process/Dummy/DummyLayerModelSerialization.cpp"
 )
 
-add_library(iscore_lib_process ${PROCESS_HDRS} ${PROCESS_SRCS} )
+if(TARGET iscore_lib_inspector)
+    set(PROCESS_HDRS ${PROCESS_HDRS}
+            "${CMAKE_CURRENT_SOURCE_DIR}/Process/Dummy/DummyInspectorWidget.hpp")
+endif()
+
+qt5_add_resources(DUMMYPROCESS_QRCS "${CMAKE_CURRENT_SOURCE_DIR}/Process/Dummy/resources/DummyResources.qrc")
+
+add_library(iscore_lib_process ${PROCESS_HDRS} ${PROCESS_SRCS}  ${DUMMYPROCESS_QRCS} )
 target_link_libraries(iscore_lib_process  PUBLIC
     Qt5::Core Qt5::Widgets iscore_lib_base iscore_lib_state)
+
+if(TARGET iscore_lib_inspector)
+  target_link_libraries(iscore_lib_process PUBLIC iscore_lib_inspector)
+endif()
 
 target_compile_definitions(iscore_lib_process PUBLIC
     $<$<BOOL:${DEFINE_ISCORE_SCENARIO_DEBUG_RECTS}>:ISCORE_SCENARIO_DEBUG_RECTS>)
