better code editor for JS

--- a/base/plugins/iscore-plugin-js/CMakeLists.txt
+++ b/base/plugins/iscore-plugin-js/CMakeLists.txt
@@ -18,6 +18,8 @@ file(GLOB_RECURSE HDRS
     "${CMAKE_CURRENT_SOURCE_DIR}/*.hpp"
 )
 set(SRCS
+"${CMAKE_CURRENT_SOURCE_DIR}/JS/jsedit/jsedit.cpp"
+
 "${CMAKE_CURRENT_SOURCE_DIR}/JS/StateProcess.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/JS/JSProcessModel.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/JS/JSProcessModelSerialization.cpp"
