--- a/base/plugins/iscore-plugin-ossia/CMakeLists.txt
+++ b/base/plugins/iscore-plugin-ossia/CMakeLists.txt
@@ -47,6 +47,7 @@ set(HDRS
     "${CMAKE_CURRENT_SOURCE_DIR}/OSSIA/Executor/EventElement.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/OSSIA/Executor/ScenarioElement.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/OSSIA/Executor/ProcessElement.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/OSSIA/Executor/StateProcessComponent.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/OSSIA/Executor/StateElement.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/OSSIA/Executor/ProcessWrapper.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/OSSIA/Executor/DocumentPlugin.hpp"
@@ -116,6 +117,7 @@ set(SRCS
 "${CMAKE_CURRENT_SOURCE_DIR}/OSSIA/Executor/LoopingProcessWrapper.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/OSSIA/Executor/ProcessWrapper.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/OSSIA/Executor/ProcessComponent.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/OSSIA/Executor/StateProcessComponent.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/OSSIA/Executor/BaseScenarioElement.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/OSSIA/Executor/EventElement.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/OSSIA/Executor/ScenarioElement.cpp"
