--- a/base/plugins/iscore-plugin-ossia/CMakeLists.txt
+++ b/base/plugins/iscore-plugin-ossia/CMakeLists.txt
@@ -161,32 +161,21 @@ target_link_libraries(${PROJECT_NAME}
         PUBLIC
           Qt5::Core Qt5::Widgets
           iscore_lib_base iscore_lib_device iscore_lib_process iscore_plugin_scenario iscore_plugin_curve iscore_plugin_automation iscore_plugin_deviceexplorer
+          APIJamoma
 )
-if(TARGET APICoppa)
-  target_link_libraries(${PROJECT_NAME}
-            PUBLIC
-              APIJamoma_Editor APICoppa
-              )
-else()
-  target_link_libraries(${PROJECT_NAME}
-            PUBLIC
-              APIJamoma
-  )
-
-  # Necesarry to override plug-in loading path
-  if(DEPLOYMENT_BUILD AND NOT ISCORE_STATIC_PLUGINS)
+if(TARGET BasicOSSIA)
+    target_link_libraries(${PROJECT_NAME} PUBLIC BasicOSSIA)
+endif()
+# Necesarry to override plug-in loading path
+if(DEPLOYMENT_BUILD AND NOT ISCORE_STATIC_PLUGINS)
     if (APPLE)
-      find_package(Jamoma 0.6)
-      target_link_libraries(${PROJECT_NAME} PRIVATE Jamoma::Foundation Jamoma::Modular)
+        find_package(Jamoma 0.6)
+        target_link_libraries(${PROJECT_NAME} PRIVATE Jamoma::Foundation Jamoma::Modular)
     elseif(UNIX AND NOT WIN32)
-      find_package(Jamoma 0.6)
-      target_link_libraries(${PROJECT_NAME} PRIVATE Jamoma::Foundation Jamoma::Modular)
+        find_package(Jamoma 0.6)
+        target_link_libraries(${PROJECT_NAME} PRIVATE Jamoma::Foundation Jamoma::Modular)
     endif()
-  endif()
 endif()
 
-if(TARGET iscore_plugin_loop)
-        target_link_libraries(${PROJECT_NAME} PUBLIC iscore_plugin_loop)
-endif()
-
+target_link_libraries(${PROJECT_NAME} PUBLIC iscore_plugin_loop)
 setup_iscore_plugin(${PROJECT_NAME})
