--- a/base/plugins/iscore-plugin-ossia/CMakeLists.txt
+++ b/base/plugins/iscore-plugin-ossia/CMakeLists.txt
@@ -35,6 +35,8 @@ set(HDRS
     "${CMAKE_CURRENT_SOURCE_DIR}/OSSIA/Protocols/MIDI/MIDISpecificSettings.hpp"
 
     "${CMAKE_CURRENT_SOURCE_DIR}/OSSIA/Protocols/v2/OSSIADevice_v2.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/OSSIA/Protocols/v2/OSC/OSCDevice_v2.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/OSSIA/Protocols/v2/OSC/OSCProtocolFactory_v2.hpp"
 
     "${CMAKE_CURRENT_SOURCE_DIR}/OSSIA/Protocols/Panel/MessagesPanel.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/OSSIA/Curve/EasingSegment.hpp"
@@ -112,6 +114,8 @@ set(SRCS
 "${CMAKE_CURRENT_SOURCE_DIR}/OSSIA/Protocols/OSSIADevice.cpp"
 
 "${CMAKE_CURRENT_SOURCE_DIR}/OSSIA/Protocols/v2/OSSIADevice_v2.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/OSSIA/Protocols/v2/OSC/OSCDevice_v2.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/OSSIA/Protocols/v2/OSC/OSCProtocolFactory_v2.cpp"
 
 "${CMAKE_CURRENT_SOURCE_DIR}/OSSIA/Protocols/Panel/MessagesPanel.cpp"
 
