--- a/base/plugins/iscore-plugin-ossia/CMakeLists.txt
+++ b/base/plugins/iscore-plugin-ossia/CMakeLists.txt
@@ -37,6 +37,8 @@ set(HDRS
     "${CMAKE_CURRENT_SOURCE_DIR}/OSSIA/Protocols/v2/OSSIADevice_v2.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/OSSIA/Protocols/v2/OSC/OSCDevice_v2.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/OSSIA/Protocols/v2/OSC/OSCProtocolFactory_v2.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/OSSIA/Protocols/v2/Minuit/MinuitDevice_v2.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/OSSIA/Protocols/v2/Minuit/MinuitProtocolFactory_v2.hpp"
 
     "${CMAKE_CURRENT_SOURCE_DIR}/OSSIA/Protocols/Panel/MessagesPanel.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/OSSIA/Curve/EasingSegment.hpp"
@@ -116,6 +118,8 @@ set(SRCS
 "${CMAKE_CURRENT_SOURCE_DIR}/OSSIA/Protocols/v2/OSSIADevice_v2.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/OSSIA/Protocols/v2/OSC/OSCDevice_v2.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/OSSIA/Protocols/v2/OSC/OSCProtocolFactory_v2.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/OSSIA/Protocols/v2/Minuit/MinuitDevice_v2.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/OSSIA/Protocols/v2/Minuit/MinuitProtocolFactory_v2.cpp"
 
 "${CMAKE_CURRENT_SOURCE_DIR}/OSSIA/Protocols/Panel/MessagesPanel.cpp"
 
