deployment scripts cleanup

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ cmake_policy(SET CMP0063 NEW)
 set(ISCORE_VERSION_MAJOR 1)
 set(ISCORE_VERSION_MINOR 0)
 set(ISCORE_VERSION_PATCH 0)
-set(ISCORE_VERSION_EXTRA a70)
+set(ISCORE_VERSION_EXTRA a71)
 set(ISCORE_CODENAME "On nie la notion de temps")
 set(ISCORE_VERSION "${ISCORE_VERSION_MAJOR}.${ISCORE_VERSION_MINOR}.${ISCORE_VERSION_PATCH}-${ISCORE_VERSION_EXTRA}")
 
@@ -35,6 +35,10 @@ include("${CMAKE_CURRENT_SOURCE_DIR}/CMake/IScoreConfiguration.cmake")
 if(ISCORE_SANITIZE)
     set(OSSIA_SANITIZE True)
 endif()
+if(ISCORE_STATIC_PLUGINS)
+    set(OSSIA_STATIC True)
+endif()
+set(OSSIA_NO_INSTALL True)
 add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/API" )
 
 find_package(Qt5 5.3 REQUIRED COMPONENTS Core Widgets Gui Network Xml Svg Test Qml WebSockets)
