--- a/base/plugins/iscore-plugin-mapping/CMakeLists.txt
+++ b/base/plugins/iscore-plugin-mapping/CMakeLists.txt
@@ -37,9 +37,7 @@ if(TARGET iscore_lib_inspector)
     set(HDRS ${HDRS} ${INSPECTOR_HDRS})
 endif()
 
-qt5_add_resources(QRCS "${CMAKE_CURRENT_SOURCE_DIR}/Mapping/Resources/MappingResources.qrc")
-
-add_library(${PROJECT_NAME} ${SRCS} ${HDRS} ${QRCS})
+add_library(${PROJECT_NAME} ${SRCS} ${HDRS})
 iscore_generate_command_list_file(${PROJECT_NAME} "${HDRS}")
 target_link_libraries(${PROJECT_NAME} PUBLIC
                      Qt5::Core Qt5::Widgets
