--- a/base/plugins/iscore-plugin-automation/CMakeLists.txt
+++ b/base/plugins/iscore-plugin-automation/CMakeLists.txt
@@ -22,26 +22,15 @@ set(SRCS
 
 "${CMAKE_CURRENT_SOURCE_DIR}/Automation/State/AutomationState.cpp"
 
-"${CMAKE_CURRENT_SOURCE_DIR}/Automation/AutomationColors.cpp"
-"${CMAKE_CURRENT_SOURCE_DIR}/iscore_plugin_automation.cpp"
-)
-
-if(TARGET iscore_lib_inspector)
-    set(INSPECTOR_SRCS
 "${CMAKE_CURRENT_SOURCE_DIR}/Automation/Inspector/AutomationStateInspector.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/Automation/Inspector/AutomationStateInspectorFactory.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/Automation/Inspector/AutomationInspectorWidget.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/Automation/Inspector/CurvePointInspectorWidget.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/Automation/Inspector/CurvePointInspectorFactory.cpp"
-    )
 
-    set(SRCS ${SRCS} ${INSPECTOR_SRCS})
-
-    file(GLOB_RECURSE INSPECTOR_HDRS
-        "${CMAKE_CURRENT_SOURCE_DIR}/Automation/Inspector/*.hpp")
-
-    set(HDRS ${HDRS} ${INSPECTOR_HDRS})
-endif()
+"${CMAKE_CURRENT_SOURCE_DIR}/Automation/AutomationColors.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/iscore_plugin_automation.cpp"
+)
 
 add_library(${PROJECT_NAME} ${SRCS} ${HDRS})
 
@@ -49,10 +38,6 @@ iscore_generate_command_list_file(${PROJECT_NAME} "${HDRS}")
 
 target_link_libraries(${PROJECT_NAME}
   PUBLIC Qt5::Core Qt5::Widgets
-            iscore_lib_base iscore_lib_device iscore_plugin_deviceexplorer iscore_lib_process iscore_lib_state iscore_plugin_curve)
-
-if(TARGET iscore_lib_inspector)
-  target_link_libraries(${PROJECT_NAME} PUBLIC iscore_lib_inspector)
-endif()
+            iscore_lib_base iscore_lib_device iscore_plugin_deviceexplorer iscore_lib_process iscore_lib_state iscore_plugin_curve iscore_lib_inspector)
 
 setup_iscore_plugin(${PROJECT_NAME})
