--- a/base/app/CMakeLists.txt
+++ b/base/app/CMakeLists.txt
@@ -37,6 +37,33 @@ endif()
 
 include(StaticApp.cmake)
 
+if(IOS)
+  find_library(COREFOUNDATION_LIBRARY CoreFoundation)
+  find_library(COREAUDIO_LIBRARY CoreAudio)
+  find_library(CORETEXT_LIBRARY CoreText)
+  find_library(FOUNDATION_LIBRARY Foundation)
+  find_library(ACCELERATE_LIBRARY Accelerate)
+  find_library(AUDIOTOOLBOX_LIBRARY AudioToolbox)
+  find_library(SECURITY_LIBRARY Security)
+  find_library(MobileCoreServices_LIBRARY MobileCoreServices)
+  find_library(SystemConfiguration_LIBRARY SystemConfiguration)
+  find_library(CoreGraphics_LIBRARY CoreGraphics)
+  find_library(UIKit_LIBRARY UIKit)
+
+  get_target_property(QtCore_LIB Qt5::Core LOCATION)
+  get_filename_component(QT_LIB_FOLDER ${QtCore_LIB} DIRECTORY)
+  find_library(qtharfbuzzng_LIBRARY NAMES qtharfbuzzng libqtharfbuzzng HINTS ${QT_LIB_FOLDER})
+  find_library(qtfreetype_LIBRARY NAMES qtfreetype libqtfreetype HINTS ${QT_LIB_FOLDER})
+  find_library(qtpcre_LIBRARY NAMES qtpcre libqtpcre HINTS ${QT_LIB_FOLDER})
+  target_link_libraries(${APPNAME} PUBLIC ${qtharfbuzzng_LIBRARY} ${qtfreetype_LIBRARY} ${qtpcre_LIBRARY} 
+    ${CoreGraphics_LIBRARY} ${CORETEXT_LIBRARY} ${COREFOUNDATION_LIBRARY} 
+    ${COREAUDIO_LIBRARY} ${SECURITY_LIBRARY} ${FOUNDATION_LIBRARY} 
+    ${ACCELERATE_LIBRARY} ${AUDIOTOOLBOX_LIBRARY}
+    ${MobileCoreServices_LIBRARY} ${SystemConfiguration_LIBRARY} ${UIKit_LIBRARY}
+    )
+  
+endif()
+
 setup_iscore_common_exe_features(${APPNAME})
 
 install(
